syntax = "proto3";

package decision;

option go_package = "github.com/rafaelsanoli/lavra.ai/go-services/pb/decision";

// Motor de decisão inteligente
service DecisionEngineService {
  // Recomendar estratégia de hedge
  rpc RecommendHedgeStrategy(HedgeStrategyRequest) returns (HedgeStrategyResponse);
  
  // Avaliar oportunidade de seguro rural
  rpc EvaluateInsuranceOpportunity(InsuranceRequest) returns (InsuranceResponse);
  
  // Otimizar momento de venda
  rpc OptimizeSaleTiming(SaleTimingRequest) returns (SaleTimingResponse);
  
  // Sugerir diversificação de portfólio
  rpc SuggestPortfolioDiversification(DiversificationRequest) returns (DiversificationResponse);
  
  // Análise de risco integrada
  rpc AnalyzeIntegratedRisk(IntegratedRiskRequest) returns (IntegratedRiskResponse);
  
  // Gerar plano de ação
  rpc GenerateActionPlan(ActionPlanRequest) returns (ActionPlanResponse);
}

message HedgeStrategyRequest {
  string user_id = 1;
  string crop_type = 2;
  double production_volume = 3; // toneladas
  double current_price = 4;
  double target_price = 5;
  string harvest_date = 6;
  double risk_tolerance = 7; // 0-1 (0=conservador, 1=agressivo)
}

message HedgeOption {
  string strategy_type = 1; // "FUTURES", "OPTIONS_PUT", "OPTIONS_CALL", "FORWARD"
  string contract_code = 2;
  string expiration_date = 3;
  double hedge_percentage = 4; // % da produção a hedgear
  double strike_price = 5;
  double premium_cost = 6;
  double expected_protection = 7; // R$
  double potential_gain = 8; // R$
  double potential_loss = 9; // R$
  string risk_level = 10; // "LOW", "MEDIUM", "HIGH"
  repeated string pros = 11;
  repeated string cons = 12;
}

message HedgeStrategyResponse {
  repeated HedgeOption recommended_options = 1;
  HedgeOption best_option = 2; // Melhor opção baseada no perfil
  double expected_return = 3;
  double downside_protection = 4;
  double upside_potential = 5;
  string recommendation_summary = 6;
  repeated string action_steps = 7;
  int64 timestamp = 8;
}

message InsuranceRequest {
  string user_id = 1;
  string crop_type = 2;
  double area_hectares = 3;
  double expected_yield = 4; // kg/ha
  double expected_price = 5;
  string location = 6;
  repeated string covered_risks = 7; // "DROUGHT", "FROST", "HAIL", "EXCESS_RAIN"
}

message InsuranceOption {
  string provider = 1;
  string product_name = 2;
  double coverage_percentage = 3; // % da produção coberta
  double premium_cost = 4; // R$/ha
  double max_indemnity = 5; // R$
  repeated string covered_risks = 6;
  string deductible = 7;
  double roi_estimate = 8; // Retorno esperado do investimento
  bool is_recommended = 9;
}

message InsuranceResponse {
  repeated InsuranceOption insurance_options = 1;
  InsuranceOption best_option = 2;
  double climate_risk_score = 3; // 0-1
  double historical_loss_probability = 4; // 0-1
  string recommendation = 5;
  bool is_economically_viable = 6;
  int64 timestamp = 7;
}

message SaleTimingRequest {
  string user_id = 1;
  string crop_type = 2;
  double available_volume = 3; // toneladas
  double breakeven_price = 4;
  string harvest_date = 5;
  bool has_storage = 6;
  double storage_cost_per_month = 7; // R$/ton
}

message SaleTiming {
  string timing_type = 1; // "IMMEDIATE", "SHORT_TERM", "MEDIUM_TERM", "LONG_TERM"
  string target_date = 2;
  double sell_percentage = 3; // % do volume a vender
  double expected_price = 4;
  double expected_revenue = 5;
  double confidence = 6; // 0-1
  repeated string rationale = 7; // Motivos da recomendação
}

message SaleTimingResponse {
  repeated SaleTiming sale_timings = 1;
  SaleTiming optimal_timing = 2;
  double current_market_price = 3;
  double forecasted_price_30d = 4;
  double forecasted_price_60d = 5;
  double forecasted_price_90d = 6;
  string market_sentiment = 7; // "BULLISH", "BEARISH", "NEUTRAL"
  repeated string market_drivers = 8; // Fatores influenciando o mercado
  string recommendation_summary = 9;
  int64 timestamp = 10;
}

message DiversificationRequest {
  string user_id = 1;
  repeated string current_crops = 2;
  double total_area_hectares = 3;
  string region = 4;
  string soil_type = 5;
  double investment_capacity = 6;
  double risk_tolerance = 7; // 0-1
}

message CropSuggestion {
  string crop_type = 1;
  double recommended_area_percentage = 2; // % da área total
  double expected_yield = 3; // kg/ha
  double expected_price = 4; // R$/kg ou R$/saca
  double expected_revenue = 5; // R$/ha
  double expected_profit = 6; // R$/ha
  double risk_score = 7; // 0-1
  string planting_window = 8;
  repeated string advantages = 9;
  repeated string challenges = 10;
  bool climate_suitable = 11;
  bool market_favorable = 12;
}

message DiversificationResponse {
  repeated CropSuggestion crop_suggestions = 1;
  double portfolio_risk_reduction = 2; // % de redução do risco
  double expected_portfolio_return = 3;
  double sharpe_ratio = 4; // Retorno ajustado ao risco
  string strategy_type = 5; // "CONSERVATIVE", "BALANCED", "AGGRESSIVE"
  repeated string benefits = 6;
  string implementation_plan = 7;
  int64 timestamp = 8;
}

message IntegratedRiskRequest {
  string user_id = 1;
  string crop_type = 2;
  double latitude = 3;
  double longitude = 4;
  double production_volume = 5;
  string current_growth_stage = 6;
  bool has_insurance = 7;
  bool has_hedge = 8;
}

message RiskComponent {
  string risk_category = 1; // "CLIMATE", "MARKET", "OPERATIONAL", "FINANCIAL"
  double risk_score = 2; // 0-1
  string severity = 3; // "LOW", "MEDIUM", "HIGH", "CRITICAL"
  repeated string factors = 4;
  repeated string mitigation_actions = 5;
}

message IntegratedRiskResponse {
  double overall_risk_score = 1; // 0-1
  string risk_level = 2; // "LOW", "MEDIUM", "HIGH", "CRITICAL"
  repeated RiskComponent risk_components = 3;
  RiskComponent highest_risk = 4;
  double climate_risk = 5;
  double market_risk = 6;
  double operational_risk = 7;
  double financial_risk = 8;
  repeated string immediate_actions = 9;
  repeated string preventive_measures = 10;
  string risk_trend = 11; // "INCREASING", "STABLE", "DECREASING"
  int64 timestamp = 12;
}

message ActionPlanRequest {
  string user_id = 1;
  repeated string goals = 2; // "MAXIMIZE_PROFIT", "MINIMIZE_RISK", "INCREASE_YIELD", etc
  repeated string constraints = 3; // "LIMITED_BUDGET", "SMALL_AREA", "NO_STORAGE", etc
  string time_horizon = 4; // "SHORT_TERM", "MEDIUM_TERM", "LONG_TERM"
  map<string, string> current_situation = 5;
}

message Action {
  int32 priority = 1; // 1-10 (10=urgente)
  string action_type = 2; // "IMMEDIATE", "SCHEDULED", "CONDITIONAL"
  string category = 3; // "HEDGE", "INSURANCE", "PLANTING", "HARVEST", "SALE"
  string description = 4;
  string due_date = 5;
  repeated string steps = 6;
  double expected_impact = 7; // 0-1
  double cost_estimate = 8;
  repeated string dependencies = 9; // Ações que devem ser feitas antes
  repeated string success_metrics = 10;
}

message ActionPlanResponse {
  repeated Action actions = 1;
  repeated Action immediate_actions = 2; // Próximos 7 dias
  repeated Action short_term_actions = 3; // Próximos 30 dias
  repeated Action medium_term_actions = 4; // Próximos 90 dias
  string strategy_summary = 5;
  double expected_risk_reduction = 6;
  double expected_profit_increase = 7;
  string success_probability = 8; // "LOW", "MEDIUM", "HIGH"
  repeated string key_milestones = 9;
  int64 timestamp = 10;
}
